<resources>
    <string name="app_name">AttendanceAppProject</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>

    <string name="login">Login</string>
    <string name="logOut">Log out</string>

    <string name="register">Register</string>
    <string name="password_reset">Forgot your password?</string>
    <string name="username_reset">Forgot your username?</string>
    <string name="blank_email">Please enter your E-Mail</string>

    <string name="welcome">Welcome back</string>
    <string name="newUserHello">Hello there</string>
    <string name="register_now">Not with us yet, create a account now!</string>
    <string name="login_now">Already a user, login now!</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="stp_switch">I am a professor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="subjects">Subjects</string>
    <string name="home">Home</string>
    <string name="account_type">Account Type:</string>


</resources>