<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/round_calendar_month_24"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/round_class_24"
            android:title="@string/subjects"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/round_logout_24"
                android:title="@string/logOut"/>
        </menu>
    </item>
</menu>